# the-controller

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agents.md  dev.sh  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts  wdio.conf.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
agents/ceo-agent/: agents.md
agents/cpo-agent/: agents.md
agents/cto-agent/: agents.md
agents/default-agent/: agents.md
docs/: domain-knowledge.md  keyboard-modes.md  web-backend-parity-audit.md
docs/plans/: 2026-02-28-agent-platform-design.md  2026-02-28-agent-platform-implementation.md  2026-02-28-fuzzy-finder-design.md  2026-02-28-fuzzy-finder-implementation.md  2026-02-28-hotkey-ux-design.md  2026-03-04-create-issue-design.md  (+87 more)
e2e/: eval.sh
scripts/: chat-integration-daemon.sh  validate-controller-chat.mjs
server/: Cargo.toml
server/src/: auto_worker.rs  cli_install.rs  commands.rs  config.rs  daemon_gateway.rs  emitter.rs  labels.rs  lib.rs  main.rs  maintainer.rs  models.rs  pty_manager.rs  secure_env.rs  session_args.rs  shell_env.rs  skills.rs  state.rs  status_socket.rs  storage.rs  tmux.rs  token_usage.rs  worktree.rs
server/src/commands/: daemon.rs  github.rs  kanban.rs
server/tests/: chat_workspace_links.rs  daemon_gateway.rs  daemon_gateway_ws.rs  integration.rs
src/: App.svelte  App.test.ts  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  (+24 more)
(+224 files in other folders)
