[package]
name = "the-controller-server"
version = "0.5.0"
description = "Web server for managing multiple Claude Code sessions"
authors = ["Noel Kwan"]
edition = "2021"

[lib]
name = "the_controller_lib"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
git2 = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
once_cell = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }

[[bin]]
name = "the-controller-server"
path = "src/main.rs"

[[bin]]
name = "controller-cli"
path = "src/bin/controller-cli.rs"

[dev-dependencies]
tempfile = "3"
